2005-06-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-display-text/richtext): Withdraw the last
	change.
	(mime-display-text/enriched): Ditto.

2005-06-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-display-text/richtext): Turn off
	adaptive-fill-mode while executing richtext-decode.
	(mime-display-text/enriched): Turn off adaptive-fill-mode while
	executing enriched-decode.

2005-03-29  Nakagawa, Makoto  <Makoto.Nakagawa@hp.com>

	* pgg-pgp.el (pgg-scheme-sign-region): Manually convert line
	endings to CRLF before signing.

2001-09-24   Daiki Ueno  <ueno@unixuser.org>

	* mime-view.el (mime-preview-toggle-display): When both "type" and
	"*type" conditions are not specified, the entity should be regarded
	as invisible.

2004-09-27  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (mime-edit-temp-message-buffer): Define.
	* mime-play.el (mime-view-temp-message-buffer): Ditto.
	(mime-preview-quitting-method-for-mime-show-message-mode): Change
	accordingly.

2004-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* README.en, README.ja (CVS based development): Mention anonymous
	CVS access; remove the description about developers' pserver access.

2003-11-15  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el (pgg-scheme-lookup-key): Use regexp match instead of
	split-string (split-string is different between emacs 21.2 and
	21.4).  Reported by ultrasoul@ultrasoul.com (David D. Smith).

2004-09-15  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-view.el (mime-preview-follow-current-entity): Avoid error
	on null entity.
	(mime-preview-find-boundary-info): Ditto.
	Avoid error at the beginning of buffer.

2004-08-28  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* pgg-pgp5.el (pgg-scheme-verify-region): `let*' -> `let'.
	* pgg-pgp.el (pgg-scheme-verify-region): Ditto.
	* mime-edit.el (mime-edit-split-and-send): Ditto.
	* mime-play.el (mime-store-message/partial-piece): Ditto.

2004-08-03  Yoichi NAKAYAMA  <yoichi@geiin.org>
